# homework_qa_guru_20_17

./: pyproject.toml  schemas.py
tests/: tests_petstore_api.py
